// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Boardのスナップショットテスト Oが勝利した場合の盤面 1`] = `
Array [
  <div
    className="status"
  >
    Winner: O
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square win"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square win"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      X
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square win"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square filled"
      onClick={[Function]}
    >
      X
    </button>
  </div>,
]
`;

exports[`Boardのスナップショットテスト Xが勝利した場合の盤面 1`] = `
Array [
  <div
    className="status"
  >
    Winner: X
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square filled"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square win"
      onClick={[Function]}
    >
      X
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square filled"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square win"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      O
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square win"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>,
]
`;

exports[`Boardのスナップショットテスト すべてのマスに△がセットされた場合 1`] = `
Array [
  <div
    className="status"
  >
    Draw...
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square filled"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square filled"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square filled"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      △
    </button>
  </div>,
]
`;

exports[`Boardのスナップショットテスト プレイ中 1`] = `
Array [
  <div
    className="status"
  >
    次のプレイヤー: O
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square filled"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      X
    </button>
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square filled"
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square filled"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    />
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>,
]
`;

exports[`Boardのスナップショットテスト 初期表示 1`] = `
Array [
  <div
    className="status"
  >
    次のプレイヤー: X
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>,
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>,
]
`;
